and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *

     ----------------------------------------------------------

06 November 19:  V.Ivanchenko (emstand-V10-05-26)
- G4ESTARStopping, G4GSMottCorrection, G4GSPWACorrections,
  G4GoudsmitSaundersonTable, G4SBBremTable, G4SeltzerBergerModel
    minor cleanup: getenv -> std::getenv, use G4Element::GetZasInt()

05 November 19:  V.Ivanchenko (emstand-V10-05-25)
- G4UrbanMscModel - fixed problem introduced in emstand-V10-05-22
    which affect Opt3 EM physics

31 October 19:  V.Ivanchenko (emstand-V10-05-24)
- G4SeltzerBergerModel, G4ICRU49NuclearStoppingModel - cosmetic 
    modifications - more safe initialisation in the MT mode

24 October 19:  I.Semeniouk (emstand-V10-05-23)
- G4BetheHeitler5DModel - new parameters set for muon (30% speed up),
    nuclear threshold calculation.

23 October 19:  V.Ivanchenko (emstand-V10-05-22)
- G4UrbanMscModel - (L.Urban) minor cleanup, should not affect results

18 October 19: I.Semeniouk (emstand-V10-05-21)
- G4BetheHeitler5DModel Add gamma conversion to mu+ mu- mode

16 October 19: D.Sawkey (emstand-V10-05-20)
- G4eplusAnnihilation: set secondary weight correctly using bias manager.

1 October 19:  V.Ivanchenko (emstand-V10-05-19)
- G4UrbanMscModel, G4GoudsmitSaundersonMscModel, G4WentzelVIModel - 
    use lambdalimit and facsafety from the base class G4VMscModel   

2 September 19:  M.Novak (emstand-V10-05-18)
- G4PairProductionRelModel, G4GammaConversion - The high energy model for e-/e+ 
    pair production has been extended down to threshold (2mc^2) such that it 
    gives results (both x-section and final state) identical to those produced 
    by the low energy (G4BetheHeitlerModel). Since this new version of the 